--- a/src/components/BlogPostListing.module.css
+++ b/src/components/BlogPostListing.module.css
@@ -1,5 +1,5 @@
 /*BlogPostListing.module.css*/
 
-.blogpostlisting  {padding : 1rem;}
-.blogpostlisting2 {margin : 0;}
-.blogpostlisting3 {margin : 0; font-style : italic;}
+.blogpostlisting    {padding : 1rem;}
+.blogpostlisting h2 {margin : 0;}
+.blogpostlisting h3 {margin : 0; font-style : italic;}
